Prevented credits from being added repeatedly on Spain 82
Fixed problem with Medusa displays and external dmddevices

*** ROM SUPPORT *** Thanks to Brent Walker, inkochnito, ipdb.org, Victor Fernandez (City Game), StrangeLeo75, Flipprojets.fr, Clay Harrell, watacaractr, Eduardo Anay, Toussu, Jordi & Orlando, Idleman, Quench, Museo del Recreativo
New:
Alvin G.: U.S.A. Football (Redemption, P08)
Inder: La Rana (https://www.recreativas.org/la-rana-1051-inder)
Joctronic: Pin Ball

Correct Dumps:
Come Back
Jurassic Park 3.05 (using display 4.00 from version 3.07 now)
Mac Attack
Riverboat Gambler PA-7 (using L-1 sound now, might still be too new, but better than L-2 anyhow)
Tales of the Arabian Nights 0.4 Prototype (see above)

Clones:
A.G. Soccer-Ball & Football R18u with 2.5L Sound (only the latter is new, 2.4 revision, inside the ROM it says 2.5L though)
Bad Cats LG-4
Big Game (MOD rev. 9)
Bushido (alternate set B)
Catacomb (No Bagatelle)
Cheech & Chong: Road-Trip'pin (Harley-Davidson unofficial MOD)
Dragonfist (MOD 14)
Faeton (6 digits)
Flintstones, The LA-5
Hardbody (rev. D) (the newest we have, only a few diagnostic lamp / switch names were corrected compared to rev. C)
Hook 4.06 (English)
Jurassic Park 3.07
Lightning (Free Play & MOD rev. 19)
Lucky Draw (alternate version - only difference is the #3 ROM)
Mach 2 (alternate set)
Meteor (Bonus Count Fix, MOD, Free Play rev. 66
Meteor (Bonus Count Fix, MOD, 7-Digit, Free Play rev. 76)
Monte Carlo (French Millions option, Free Play)
Monte Carlo (German Millions option, Free Play)
Monte Carlo (rev. 2 Millions option, Free Play)
MotorDome (rev. B)
Nine Ball (Ball handling MOD beta19 & Gameplay MOD beta21)
No Fear 0.8X with SL-1 Sound
Quicksilver (Free Play & modified rules rev. 07D)
Saturn 2 (Free Play)
Seawitch (MOD rev. 5,6,7 & 8)
Silverball Mania (Horseshoe Spot MOD rev. 13)
Silverball Mania (Horseshoe No Spotting MOD rev. 13)
Teenage Mutant Ninja Turtles 1.01
Theatre of Magic 1.2A