@@ -43,6 +43,7 @@
 #define BY61_CPUREGION (REGION_CPU1+BY61_CPUNO)
 
 extern MACHINE_DRIVER_EXTERN(by61);
+extern MACHINE_DRIVER_EXTERN(by61x2);
 
 #define BY61_SOUNDROMxxx0(u5,chk5) \
   SOUNDREGION(0x10000, BY61_CPUREGION) \
