@@ -75,6 +75,7 @@ struct sndbrdIntf {
 #define SNDBRD_BY51N   SNDBRD_TYPE( 5,2)
 #define SNDBRD_BY61    SNDBRD_TYPE( 7,0)
 #define SNDBRD_BY61B   SNDBRD_TYPE( 7,1)
+#define SNDBRD_BY61B2  SNDBRD_TYPE( 7,2)
 //#define SNDBRD_BY81    SNDBRD_TYPE( 7,2) // 'Say It Again' sound board for Centaur (II), is done differently
 #define SNDBRD_BY45    SNDBRD_TYPE( 8,0)
 #define SNDBRD_BY45BP  SNDBRD_TYPE( 8,1)
